--- a/src/less/blocks/contacts.less
+++ b/src/less/blocks/contacts.less
@@ -63,6 +63,9 @@
   .contacts__map {
     height: 505px;
   }
+  .contacts__list dt {
+    padding-bottom: 18px;
+  }
 }
 
 @media (min-width: 1400px) { 
