--- a/src/less/blocks/page-header.less
+++ b/src/less/blocks/page-header.less
@@ -10,60 +10,55 @@
   }
 }
 
-.main-nav {
+.page-header__nav-wrap {
   display: block;
   float: left;
   width: 100%;
+}
 
+.main-nav {
+  &:extend(.clearlist);
+  display: block;
+  margin-top: 5px;
+  text-align: center;
+  max-height: 0;
+  overflow: hidden;
+  background: #283645;
+  transition: max-height .4s;
 
-  ul {
-    &:extend(.clearlist);
-    display: block;
-    margin-top: 5px;
-    text-align: center;
-    max-height: 0;
-    overflow: hidden;
-    background: #283645;
-    transition: max-height .4s;
+  li {
+    border-top: 1px solid @grey-base;
+    box-shadow: 0 1px 0 desaturate(lighten(@dark-blue, 12%), 11%) inset;
 
-    li {
-      border-top: 1px solid @grey-base;
-      box-shadow: 0 1px 0 desaturate(lighten(@dark-blue, 12%), 11%) inset;
-
-      &:last-child {
-        border-bottom: 1px solid #000000;
-      }
+    &:last-child {
+      border-bottom: 1px solid #000000;
     }
   }
 }
 
 .page-header.open {
   background: @base-color;
+}
 
-
-  .main-nav ul {
+.open {
+  .main-nav {
     max-height: 500px;
+  }
 
-
-    > li:hover > a,
-    > li:hover > span,
-    > li:focus > a,
-    > li:focus > span,
-    > li.active > a,
-    > li.active > span {
-      color: @pink;
-      text-decoration: none;
-    }
+  li:hover > a,
+  li.active > a {
+    color: @pink;
+    text-decoration: none;
   }
 }
 
 
+
 // .page-header{
 
-  .main-nav ul {
+  .main-nav {
 
-    > li > a,
-    > li > span {
+    li > a {
       display: block;
       .small-caption;
       padding: 14px 0;
@@ -87,7 +82,7 @@
   position: absolute;
   top: 21px;
   right: 39px;
-  padding: 10px 48px 16px 0px;
+  padding: 10px 50px 16px 0px;
   color: transparent;
   font: 0/0 a;
   cursor: pointer;
@@ -160,26 +155,25 @@
   .nav-toggle {
     display: none;
   }
-  .main-nav {
+  .page-header__nav-wrap {
     display: table;
   }
-  .main-nav ul {
+  .main-nav  {
     &:extend(.clearlist);
     display: table-row;
     max-height: 100%;
     background: transparent;
   }
-  .main-nav ul > li {
+  .main-nav  > li {
     display: table-cell;
     border-top: none;
     box-shadow: none;
     padding: 24px 0 29px;
   }
-  .main-nav ul > li:last-child {
+  .main-nav  > li:last-child {
     border-bottom: none;
   }
-  .main-nav ul > li > a,
-  .main-nav ul > li > span {
+  .main-nav  li > a {
     position: relative;
     display: inline;
     font-size: 18px;
@@ -189,7 +183,7 @@
     text-transform: none;
   }
   
-  .main-nav ul > li > a:after {
+  .main-nav  li > a:after {
     content: '';
     position: absolute;
     left: 0;
@@ -204,44 +198,42 @@
   .page-header.open {
     .bg(#000,50%);
   }
-  .page-header.open .main-nav ul > li:hover > a,
-  .page-header.open .main-nav ul > li:hover > span,
-  .page-header.open .main-nav ul > li:focus > a,
-  .page-header.open .main-nav ul > li:focus > span,
-  .page-header.open .main-nav ul > li.active > a,
-  .page-header.open .main-nav ul > li.active > span {
+  .open .main-nav li:hover > a,
+  .open .main-nav li:focus > a,
+  .open .main-nav li.active > a {
       color: @white;
   }
 
-  .main-nav ul > li a:hover,
-  .main-nav ul > li span:hover,
-  .main-nav ul > li a:focus,
-  .main-nav ul > li span:focus,
-  .main-nav ul > li.active a,
-  .main-nav ul > li.active span {
+  .main-nav li a:hover,
+  .main-nav li a:focus,
+  .main-nav li.active a {
     text-decoration: none;
     color: @white;
-    // border-bottom: 2px solid @white;
   }
-  .main-nav ul > li a:hover:after,
-  .main-nav ul > li span:hover:after {
+  .main-nav li a:hover:after {
     width: 100%;
     height: 2px;
     opacity: 1;
-    // transform: scale(1);
   }
 
 
-  .main-nav ul > li.active > a,
-  .main-nav ul > li > a:active {
+  .main-nav li.active > a,
+  .main-nav li > a:active {
     cursor: default;
     text-decoration: none;
     color: @white;
   }
 }
 
+@media (min-width: 700px) {
+  .nav-toggle {
+    top: 45px;
+    right: 55px;
+  }
+}
+
 @media (min-width: 1100px) {
-  .main-nav ul > li {
+  .main-nav li {
     padding: 39px 0 41px;
     text-align: right;
   }
