--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -161,7 +161,15 @@ input[id^="btn-"] {
   transform: rotate(225deg);
 }
 
+@media (min-width: 700px) {
+  .slick-slider {
+    padding-bottom: 6px;
+  }
+}
 @media (min-width: 1200px) {
+  .slick-slider {
+    padding-bottom: 30px;
+  }
   .slick-prev, 
   .slick-next {
     display: block;
