--- a/src/less/blocks/logo.less
+++ b/src/less/blocks/logo.less
@@ -26,7 +26,7 @@
   .logo {
     padding: 20px 24px 38px;
   }
-  .page-footer .logo {
+  .logo--footer {
     padding: 16px 2px 40px;
   }
   .icon-logotype-white-1 {
@@ -42,7 +42,7 @@
     margin: 0;
     padding: 20px 10px 21px;
   }
-  .page-footer .logo {
+  .logo--footer {
     padding: 16px 0 40px;
   }
   .icon-logotype-white-3,
