--- a/src/less/blocks/contacts.less
+++ b/src/less/blocks/contacts.less
@@ -4,8 +4,12 @@
   text-align: center;
 
   &__caption {
+    display: block;
     .big-caption();
-    padding-bottom: 7px;
+    margin: 0;
+    padding: 33px 0 7px;
+    color: @grey-base;
+    text-decoration: none;
   }
   &__text {
     position: relative;
