--- a/src/less/blocks/features.less
+++ b/src/less/blocks/features.less
@@ -19,9 +19,12 @@
 
   &__caption {
     display: block;
+    margin: 0;
+    .text-font (@fz-large, 21px, @fw-bold);
     font-size: @fz-large;
     line-height: 21px;
     padding-bottom: 13px;
+    color: @grey-base;
   }
 
   &__mob-img {
