--- a/src/less/blocks/page-captions.less
+++ b/src/less/blocks/page-captions.less
@@ -1,9 +1,13 @@
 .page-caption {
+  display: block;
   padding: 16px 0;
+  margin: 0;
   font-size: @fz-page-caption;
   font-weight: @fw-light;
   line-height: 28px;
   text-align: center;
+  text-decoration: none;
+  color: @grey-base;
 }
 
 
