Google map added + slick-slider theme.css deleted

--- a/src/less/blocks/logo.less
+++ b/src/less/blocks/logo.less
@@ -8,17 +8,18 @@
     font-size: 0;
     line-height: 0;
   }
-}
-.icon-logotype-white-2,
-.icon-logotype-white-3,
-.icon-logotype-blue-3 {
-  display: none;
-}
-.icon-logotype-white-2:hover .glasses {
-  fill: @pink;
-}
-.icon-logotype-blue-3:hover .star {
-  fill: @pink;
+  
+  .icon-logotype-white-2,
+  .icon-logotype-white-3,
+  .icon-logotype-blue-3 {
+    display: none;
+  }
+  .icon-logotype-white-2:hover .glasses {
+    fill: @pink;
+  }
+  .icon-logotype-blue-3:hover .star {
+    fill: @pink;
+  }
 }
 
 
@@ -29,10 +30,10 @@
   .logo--footer {
     padding: 16px 2px 40px;
   }
-  .icon-logotype-white-1 {
+  .logo .icon-logotype-white-1 {
     display: none;
   }
-  .icon-logotype-white-2 {
+  .logo .icon-logotype-white-2 {
     display: inline-block;
   }
 }
@@ -45,12 +46,12 @@
   .logo--footer {
     padding: 16px 0 40px;
   }
-  .icon-logotype-white-3,
-  .icon-logotype-blue-3 {
+  .logo .icon-logotype-white-3,
+  .logo .icon-logotype-blue-3 {
     display: inline-block;
   }
-  .icon-logotype-white-2,
-  .icon-logotype-blue-2 {
+  .logo .icon-logotype-white-2,
+  .logo .icon-logotype-blue-2 {
     display: none;
   }
 }
