--- a/src/less/style.less
+++ b/src/less/style.less
@@ -11,6 +11,9 @@
 @import 'base/type.less';
 @import 'base/layout.less';
 
+// slider
+@import 'vendors/slick.less';
+// @import 'vendors/slick-theme.less';
 
 // Blocks
 @import 'blocks/page-header.less';
@@ -21,13 +24,12 @@
 @import 'blocks/intro.less';
 @import 'blocks/box.less';
 @import 'blocks/slider.less';
+@import 'blocks/slick-slider.less';
 @import 'blocks/price-table.less';
 @import 'blocks/features.less';
 @import 'blocks/effect.less';
 @import 'blocks/reviews.less';
 @import 'blocks/contacts.less';
+@import 'blocks/map.less';
 @import 'blocks/socials.less';
 @import 'blocks/copyright.less';
-
-
-
