--- a/src/css/style.css
+++ b/src/css/style.css
@@ -980,6 +980,105 @@ p {
 	z-index: 100;
 }
 
+/* Slider */
+
+.slick-slider {
+	position: relative;
+	display: block;
+	box-sizing: border-box;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-touch-callout: none;
+	-khtml-user-select: none;
+	-ms-touch-action: pan-y;
+	touch-action: pan-y;
+	-webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+	position: relative;
+	display: block;
+	overflow: hidden;
+	margin: 0;
+	padding: 0;
+}
+
+.slick-list:focus {
+	outline: none;
+}
+
+.slick-list.dragging {
+	cursor: pointer;
+	cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+	-webkit-transform: translate3d(0, 0, 0);
+	-ms-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+	position: relative;
+	top: 0;
+	left: 0;
+	display: block;
+}
+
+.slick-track:before,
+.slick-track:after {
+	display: table;
+	content: '';
+}
+
+.slick-track:after {
+	clear: both;
+}
+
+.slick-loading .slick-track {
+	visibility: hidden;
+}
+
+.slick-slide {
+	display: none;
+	float: left;
+	height: 100%;
+	min-height: 1px;
+}
+
+[dir='rtl'] .slick-slide {
+	float: right;
+}
+
+.slick-slide img {
+	display: block;
+}
+
+.slick-slide.slick-loading img {
+	display: none;
+}
+
+.slick-slide.dragging img {
+	pointer-events: none;
+}
+
+.slick-initialized .slick-slide {
+	display: block;
+}
+
+.slick-loading .slick-slide {
+	visibility: hidden;
+}
+
+.slick-vertical .slick-slide {
+	display: block;
+	height: auto;
+	border: 1px solid transparent;
+}
+
 .page-header {
 	background: rgba(0, 0, 0, 0.5);
 	transition: background .4s;
@@ -1162,7 +1261,7 @@ p {
 }
 
 .page-footer__container {
-	padding: 24px 0 0px;
+	padding: 11px 0 25px;
 }
 
 .page-footer__container:before,
@@ -1221,17 +1320,17 @@ p {
 	line-height: 0;
 }
 
-.icon-logotype-white-2,
-.icon-logotype-white-3,
-.icon-logotype-blue-3 {
+.logo .icon-logotype-white-2,
+.logo .icon-logotype-white-3,
+.logo .icon-logotype-blue-3 {
 	display: none;
 }
 
-.icon-logotype-white-2:hover .glasses {
+.logo .icon-logotype-white-2:hover .glasses {
 	fill: #d22856;
 }
 
-.icon-logotype-blue-3:hover .star {
+.logo .icon-logotype-blue-3:hover .star {
 	fill: #d22856;
 }
 
@@ -1376,41 +1475,13 @@ p {
 }
 
 .box--angle {
-	margin-bottom: -77px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
 	height: 70px;
 	fill: #fff;
-}
-
-.slider__pagination {
-	text-align: center;
-	padding: 14px 0;
-}
-
-.slider__pagination i {
-	display: inline-block;
-	width: 6px;
-	height: 6px;
-	margin: 0 7px;
-	background: #bec2c7;
-	border-radius: 50%;
-	vertical-align: middle;
-}
-
-.slider__pagination i:hover,
-.slider__pagination i:focus {
-	background: #7e868f;
-}
-
-.slider__pagination i:active {
-	background: #e9ebec;
-}
-
-.slider__pagination i.active {
-	width: 12px;
-	height: 12px;
-	border: 3px solid #283645;
-	background-color: #ffffff;
-	cursor: default;
+	z-index: 50;
 }
 
 .slider {
@@ -1452,9 +1523,9 @@ p {
 	margin: 0 4px;
 	background: #bec2c7;
 	border: 3px solid #f2f2f2;
+	border-radius: 50%;
 	vertical-align: top;
 	cursor: pointer;
-	border-radius: 50%;
 	transition: background-color 0.2s;
 }
 
@@ -1497,35 +1568,25 @@ input[id^="btn-"] {
 }
 
 .slick-slider {
-	padding-bottom: 30px;
-}
-
-.slick-dots {
-	bottom: -7px;
-	margin: 0;
-}
-
-.slick-dots li {
-	margin: 0px 2px;
-}
-
-.slick-dots li.slick-active button:before {
-	content: '';
-	top: 4px;
-	left: 4px;
-	width: 12px;
-	height: 12px;
-	border: 3px solid #283645;
-	background-color: #ffffff;
-	cursor: default;
-	border-radius: 50%;
-	opacity: 1;
+	padding-bottom: 61px;
 }
 
 .slick-prev,
 .slick-next {
 	display: none;
+	position: absolute;
 	top: 55%;
+	width: 20px;
+	height: 20px;
+	margin-top: -10px;
+	padding: 0;
+	font-size: 0;
+	line-height: 0;
+	cursor: pointer;
+	color: transparent;
+	border: none;
+	outline: none;
+	background: transparent;
 }
 
 .slick-prev {
@@ -1556,6 +1617,64 @@ input[id^="btn-"] {
 	-webkit-transform: rotate(225deg);
 	-ms-transform: rotate(225deg);
 	transform: rotate(225deg);
+}
+
+.slick-prev:hover,
+.slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus {
+	color: transparent;
+	outline: none;
+	background: transparent;
+}
+
+.slick-dots {
+	position: absolute;
+	display: block;
+	bottom: 19px;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	list-style: none;
+	text-align: center;
+}
+
+.slick-dots li {
+	position: relative;
+	display: inline-block;
+	margin: 0px 2px;
+	width: 20px;
+	height: 20px;
+	cursor: pointer;
+}
+
+.slick-dots li button {
+	display: block;
+	width: 12px;
+	height: 12px;
+	padding: 0;
+	font-size: 0;
+	line-height: 0;
+	color: transparent;
+	outline: none;
+	background: #bec2c7;
+	border: 3px solid #ffffff;
+	border-radius: 50%;
+	vertical-align: top;
+	cursor: pointer;
+}
+
+.slick-dots .slick-active button {
+	content: '';
+	top: 4px;
+	left: 4px;
+	width: 12px;
+	height: 12px;
+	border: 3px solid #283645;
+	background-color: #ffffff;
+	cursor: default;
+	border-radius: 50%;
+	opacity: 1;
 }
 
 .price-table {
@@ -1875,7 +1994,7 @@ input[id^="btn-"] {
 	line-height: 28px;
 	font-weight: 300;
 	margin: 0;
-	padding: 33px 0 7px;
+	padding: 33px 0 27px;
 	color: #000000;
 	text-decoration: none;
 }
@@ -1906,9 +2025,8 @@ input[id^="btn-"] {
 	color: #d22856;
 }
 
-.contacts__map {
+.map {
 	height: 225px;
-	background: #f2f2f2 url(../img/map.png) 50% 63% no-repeat;
 }
 
 .socials {
@@ -2307,11 +2425,11 @@ td.visible-sm {
 	padding: 16px 2px 40px;
 }
 
-.icon-logotype-white-1 {
+.logo .icon-logotype-white-1 {
 	display: none;
 }
 
-.icon-logotype-white-2 {
+.logo .icon-logotype-white-2 {
 	display: inline-block;
 }
 
@@ -2458,17 +2576,16 @@ td.visible-sm {
 	margin-bottom: 28px;
 }
 
-.contacts__map {
-	height: 363px;
-	background: #f2f2f2 url(../img/map.png) 50% 64% no-repeat;
-}
-
 .contacts__list {
 	min-height: 84px;
 }
 
 .contacts .contacts__list dd {
 	line-height: 31px;
+}
+
+.map {
+	height: 363px;
 }
 
 }
@@ -2784,13 +2901,13 @@ td.visible-sm {
 	padding: 16px 0 40px;
 }
 
-.icon-logotype-white-3,
-.icon-logotype-blue-3 {
+.logo .icon-logotype-white-3,
+.logo .icon-logotype-blue-3 {
 	display: inline-block;
 }
 
-.icon-logotype-white-2,
-.icon-logotype-blue-2 {
+.logo .icon-logotype-white-2,
+.logo .icon-logotype-blue-2 {
 	display: none;
 }
 
@@ -2940,12 +3057,12 @@ td.visible-md {
 	margin-bottom: 40px;
 }
 
-.contacts__map {
-	height: 505px;
-}
-
 .contacts__list dt {
 	padding-bottom: 18px;
+}
+
+.map {
+	height: 505px;
 }
 
 }
@@ -3338,7 +3455,7 @@ td.visible-lg {
 
 @media (min-width: 1400px) {
 
-.contacts__map {
+.map {
 	height: 522px;
 }
 
