--- a/src/less/blocks/box.less
+++ b/src/less/blocks/box.less
@@ -34,9 +34,13 @@
 
 // svg
 .box--angle {
-  margin-bottom: -77px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
   height: 70px;
   fill:#fff;
+  z-index: 50;
 }
 
 
