--- a/src/less/blocks/btn.less
+++ b/src/less/blocks/btn.less
@@ -1,5 +1,6 @@
 .btn {
   display: inline-block;
+  vertical-align: middle;
   padding: 8px 25px 11px;
   margin-bottom: 33px;
   font-size: @fz-large;
