--- a/src/less/blocks/logo.less
+++ b/src/less/blocks/logo.less
@@ -35,6 +35,7 @@
   }
   .logo .icon-logotype-white-2 {
     display: inline-block;
+    vertical-align: bottom;
   }
 }
 
@@ -49,6 +50,7 @@
   .logo .icon-logotype-white-3,
   .logo .icon-logotype-blue-3 {
     display: inline-block;
+    vertical-align: bottom;
   }
   .logo .icon-logotype-white-2,
   .logo .icon-logotype-blue-2 {
