--- a/src/less/blocks/map.less
+++ b/src/less/blocks/map.less
@@ -1,22 +1,6 @@
 .map {
-  height: 225px;
-}
-
-
-@media (min-width: 700px) {
-  .map {
-    height: 363px;
-  }
-}
-
-@media (min-width: 1100px) { 
-  .map {
-    height: 505px;
-  }
-}
-
-@media (min-width: 1400px) { 
-  .map {
-    height: 522px;
-  }
+  background: url(../img/map.png) no-repeat 50% 0;
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
