--- a/src/less/blocks/page-header.less
+++ b/src/less/blocks/page-header.less
@@ -169,6 +169,7 @@
     border-top: none;
     box-shadow: none;
     padding: 24px 0 29px;
+    overflow: hidden; // for IE transforms
   }
   .main-nav  > li:last-child {
     border-bottom: none;
