--- a/src/less/blocks/reviews.less
+++ b/src/less/blocks/reviews.less
@@ -61,6 +61,7 @@
   }
   .reviews .icon-quotes {
     display: inline-block;
+    vertical-align: bottom;
   }
   .reviews__text {
     padding-top: 15px;
