--- a/src/less/blocks/slick-slider.less
+++ b/src/less/blocks/slick-slider.less
@@ -65,6 +65,7 @@
 .slick-dots li {
   position: relative;
   display: inline-block;
+  vertical-align: bottom;
   margin: 0px 2px;
   width: 20px;
   height: 20px;
