--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -38,8 +38,9 @@
 
   &__slide {
     min-height: 303px;
-    width: 33.33333333333333%;
+    width: 33.2%;
     display: inline-block;
+    vertical-align: middle;
   }
   
   &--slides{
@@ -65,6 +66,7 @@
   
   label {
     display: inline-block;
+    vertical-align: bottom;
     width: 12px;
     height: 12px;
     margin: 0 4px;
