--- a/src/less/blocks/features.less
+++ b/src/less/blocks/features.less
@@ -33,8 +33,7 @@
     overflow: hidden;
 
     img {
-      min-width: 157px;
-      max-width: 268px;
+      width: 156px;
     }
   }
 }
@@ -54,7 +53,7 @@
     margin: -105px 0 0 5px;
   }
   .features__mob-img img {
-    max-width: 268px;
+    width: 268px;
   }
 }
 
