--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -38,7 +38,7 @@
 
   &__slide {
     min-height: 303px;
-    width: 33.2%;
+    width: 33.1%;
     display: inline-block;
     vertical-align: middle;
   }
@@ -50,7 +50,7 @@
   }
 
   &--tables {
-    padding: 0 25px 0 18px;
+    padding: 0 20px;
   }
 }
 
