--- a/src/less/blocks/btn.less
+++ b/src/less/blocks/btn.less
@@ -47,7 +47,13 @@
 
 @media (min-width: 992px) {
   .btn--fixed {
-    margin-bottom: 67px;
     margin-left: 8px;
   }
 }
+
+@media (min-width: 1200px) {
+  .btn--fixed {
+    margin-bottom: 67px;
+  }
+}
+
