--- a/src/less/blocks/logo.less
+++ b/src/less/blocks/logo.less
@@ -35,7 +35,7 @@
   }
   .logo .icon-logotype-white-2 {
     display: inline-block;
-    vertical-align: bottom;
+    vertical-align: middle;
   }
 }
 
@@ -50,7 +50,7 @@
   .logo .icon-logotype-white-3,
   .logo .icon-logotype-blue-3 {
     display: inline-block;
-    vertical-align: bottom;
+    vertical-align: middle;
   }
   .logo .icon-logotype-white-2,
   .logo .icon-logotype-blue-2 {
