--- a/src/less/blocks/price-table.less
+++ b/src/less/blocks/price-table.less
@@ -170,12 +170,12 @@
 
 @media (min-width: 1200px) {
   .box__container--price {
-    padding-top: 0px;
-    margin-top: -15px;
+    padding-top: 0;
+    margin-top: 0;
   }
   .price-table--big {
     max-width: 100%;
-    margin: 0 auto 45px;
+    margin: 14px auto 45px;
   }
   .price-table--big .price-table__caption {
     font-size: 18px;
