--- a/src/less/blocks/reviews.less
+++ b/src/less/blocks/reviews.less
@@ -57,23 +57,26 @@
 
 @media (min-width: 1200px) {
   .reviews {
-    padding-top: 69px;
-  }
-  .reviews .icon-quotes {
-    display: inline-block;
-    vertical-align: bottom;
-  }
-  .reviews__text {
-    padding-top: 15px;
-    padding-bottom: 20px;
-    font-size: 18px;
-  }
-  .reviews__author {
-    font-size: 24px;
+    padding-top: 43px;
+    
+    .icon-quotes {
+      display: inline-block;
+      vertical-align: bottom;
+    }
+    
+    &__text {
+      padding-top: 15px;
+      padding-bottom: 20px;
+      font-size: 18px;
+    }
 
-    small {
-      display: block;
-      .text-font (18px, 25px, 400)
+    &__author {
+      font-size: 24px;
+
+      small {
+        display: block;
+        .text-font (18px, 25px, 400)
+      }
     }
   }
 }
