--- a/src/less/blocks/contacts.less
+++ b/src/less/blocks/contacts.less
@@ -37,7 +37,7 @@
 @media (min-width: 700px) {
   .contacts__caption {
     .text-font (40px, 48px, @fw-light);
-    margin-bottom: 28px;
+    padding-bottom: 35px;
   }
   .contacts__list {
     min-height: 84px;
@@ -50,7 +50,7 @@
 @media (min-width: 1100px) { 
   .contacts__caption {
     .text-font (50px, 60px, @fw-light);
-    margin-bottom: 40px;
+    padding-bottom: 47px;
   }
   .contacts__list dt {
     padding-bottom: 18px;
