--- a/src/less/blocks/map.less
+++ b/src/less/blocks/map.less
@@ -1,5 +1,5 @@
 .map {
-  background: url(../img/map.png) no-repeat 50% 0;
+  background: url(../img/map.jpg) no-repeat 50% 0;
   height: 100%;
   padding: 0;
   margin: 0;
