--- a/src/less/blocks/page-header.less
+++ b/src/less/blocks/page-header.less
@@ -163,66 +163,70 @@
     display: table-row;
     max-height: 100%;
     background: transparent;
-  }
-  .main-nav  > li {
-    display: table-cell;
-    border-top: none;
-    box-shadow: none;
-    padding: 24px 0 29px;
-    overflow: hidden; // for IE transforms
-  }
-  .main-nav  > li:last-child {
-    border-bottom: none;
-  }
-  .main-nav  li > a {
-    position: relative;
-    display: inline;
-    font-size: 18px;
-    font-weight: 400;
-    color: @white;
-    padding: 10px 0;
-    text-transform: none;
-  }
   
-  .main-nav  li > a:after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 0;
-    height: 0;
-    background: @white;
-    // transform: scale(0);
-    opacity: 0;
-    transition: all .5s;
+    > li {
+      display: table-cell;
+      border-top: none;
+      box-shadow: none;
+      padding: 24px 0 29px;
+      overflow: hidden; // for IE transforms
+    }
+
+    > li:last-child {
+      border-bottom: none;
+    }
+
+    li > a {
+      position: relative;
+      display: inline;
+      font-size: 18px;
+      font-weight: 400;
+      color: @white;
+      padding: 10px 0;
+      text-transform: none;
+    }
+  
+    li > a:after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 0;
+      height: 0;
+      background: @white;
+      // transform: scale(0);
+      opacity: 0;
+      transition: all .5s;
+    }
   }
+
+
   .page-header.open {
     .bg(#000,50%);
-  }
-  .open .main-nav li:hover > a,
-  .open .main-nav li:focus > a,
-  .open .main-nav li.active > a {
+  
+    .main-nav li:hover > a,
+    .main-nav li.active > a {
       color: @white;
+    }
   }
+  .main-nav {
 
-  .main-nav li a:hover,
-  .main-nav li a:focus,
-  .main-nav li.active a {
-    text-decoration: none;
-    color: @white;
-  }
-  .main-nav li a:hover:after {
-    width: 100%;
-    height: 2px;
-    opacity: 1;
-  }
+    li a:hover,
+    li a:focus,
+    li.active a {
+      text-decoration: none;
+      color: @white;
+    }
+    
+    li a:hover:after {
+      width: 100%;
+      height: 2px;
+      opacity: 1;
+    }
 
-
-  .main-nav li.active > a,
-  .main-nav li > a:active {
-    cursor: default;
-    text-decoration: none;
-    color: @white;
+    li.active > a {
+      cursor: default;
+    }
   }
 }
 
